getHomeworksToCheck TeacherService updated